--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,13 @@
+body{
+  background-color: #474a51;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+}
+
 div{
   width: 300px;
+  height: 50px;
+  background-color: darkcyan;
   text-align: center;
-  background-color: wheat;
 }
